p2/confs/apps/app1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 1

  selector:
    matchLabels:
      app: app1

  template:
    metadata:
      labels:
        app: app1

    spec:
      containers:
        - name: app1
          image: paulbouwer/hello-kubernetes:1.10
          ports:
            - containerPort: 8080
