p2/confs/apps/app3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
spec:
  replicas: 1

  selector:
    matchLabels:
      app: app3

  template:
    metadata:
      labels:
        app: app3

    spec:
      containers:
        - name: app3
          image: paulbouwer/hello-kubernetes:1.10
          ports:
            - containerPort: 8080
