p2/confs/apps/app3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3-service

spec:
  selector:
    app: app3

  ports:
    - port: 80
      targetPort: 8080
