p2/confs/apps/default-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-ingress
spec:
  ingressClassName: traefik

  defaultBackend:
    service:
      name: app3-service
      port:
        number: 80
